<resources>
    <string name="app_name">NevaLost</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="hint_username">Nom d\'utilisateur</string>
    <string name="nom_poursuit">Nom de la Poursuite</string>
    <string name="hint_poursuit">Nom Poursuite</string>
    <string name="nom_password">Mot de passe</string>
    <string name="hint_password">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="title_activity_test_map">Map</string>
    <string name="title_activity_creator_maps">Map</string>
    <string name="title_activity_follower_maps">Map</string>
    <string name="hostname_server">valou.ddns.net</string>
    <string name="stop_pursuit">Stop pursuit</string>
</resources>
